WCS fix - no longer need to write out to file

--- a/TDdemo_RSP.ipynb
+++ b/TDdemo_RSP.ipynb
@@ -822,15 +822,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "48c8ded8-5c10-4ac4-8eee-e06465d915f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:56:01.815947Z",
-     "iopub.status.busy": "2025-08-01T13:56:01.815616Z",
-     "iopub.status.idle": "2025-08-01T13:56:42.461180Z",
-     "shell.execute_reply": "2025-08-01T13:56:42.460657Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:01.815923Z"
+     "iopub.execute_input": "2025-08-03T17:34:32.749394Z",
+     "iopub.status.busy": "2025-08-03T17:34:32.748822Z",
+     "iopub.status.idle": "2025-08-03T17:35:17.076538Z",
+     "shell.execute_reply": "2025-08-03T17:35:17.076017Z",
+     "shell.execute_reply.started": "2025-08-03T17:34:32.749368Z"
     },
     "scrolled": true
    },
@@ -900,10 +900,9 @@
     "        psf_sc2 = psf_ref.array.reshape(1, N1,N2)\n",
     "        #The below shortcut does not work and produced the wrong wcs for the cutouts...\n",
     "        #wcs_ref = WCS(img_ref.getWcs().getFitsMetadata())\n",
-    "        filename = os.path.join(tempdir,'cutout_'+str(i)+'.fits')\n",
-    "        img_ref.writeFits(filename)\n",
-    "        f=fits.open(filename)\n",
-    "        wcs_ref = WCS(f[1].header)\n",
+    "        offset = geom.Extent2D(geom.Point2I(0, 0) - img_ref.getXY0())\n",
+    "        shifted_wcs = img_ref.getWcs().copyAtShiftedPixelOrigin(offset)\n",
+    "        wcs_ref = WCS(shifted_wcs.getFitsMetadata())\n",
     "        obs = scarlet2.Observation(jnp.array(image_sc2).astype(float),\n",
     "                           weights=jnp.array(weight_sc2).astype(float),\n",
     "                           psf=scarlet2.ArrayPSF(jnp.array(psf_sc2).astype(float)),\n",
@@ -982,15 +981,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "1741be5c-3780-4af8-bd0d-35156e9bcd27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:56:42.462214Z",
-     "iopub.status.busy": "2025-08-01T13:56:42.461989Z",
-     "iopub.status.idle": "2025-08-01T13:56:44.951746Z",
-     "shell.execute_reply": "2025-08-01T13:56:44.951193Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:42.462197Z"
+     "iopub.execute_input": "2025-08-03T17:35:17.077592Z",
+     "iopub.status.busy": "2025-08-03T17:35:17.077381Z",
+     "iopub.status.idle": "2025-08-03T17:35:18.005144Z",
+     "shell.execute_reply": "2025-08-03T17:35:18.004607Z",
+     "shell.execute_reply.started": "2025-08-03T17:35:17.077576Z"
     }
    },
    "outputs": [
@@ -1042,15 +1041,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "b2ba037e-fa1c-49a3-8fdb-8e06015289bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:56:44.952581Z",
-     "iopub.status.busy": "2025-08-01T13:56:44.952375Z",
-     "iopub.status.idle": "2025-08-01T13:56:46.961464Z",
-     "shell.execute_reply": "2025-08-01T13:56:46.960882Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:44.952564Z"
+     "iopub.execute_input": "2025-08-03T17:35:18.006032Z",
+     "iopub.status.busy": "2025-08-03T17:35:18.005819Z",
+     "iopub.status.idle": "2025-08-03T17:35:18.303273Z",
+     "shell.execute_reply": "2025-08-03T17:35:18.302673Z",
+     "shell.execute_reply.started": "2025-08-03T17:35:18.006014Z"
     }
    },
    "outputs": [],
@@ -1154,18 +1153,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7c8bfa2d-e22d-4731-9c14-c985d059fc74",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2025-08-01T13:56:50.924502Z",
-     "iopub.status.idle": "2025-08-01T13:56:50.924709Z",
-     "shell.execute_reply": "2025-08-01T13:56:50.924620Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:50.924611Z"
+     "iopub.execute_input": "2025-08-03T17:36:26.639506Z",
+     "iopub.status.busy": "2025-08-03T17:36:26.638926Z",
+     "iopub.status.idle": "2025-08-03T17:36:28.967396Z",
+     "shell.execute_reply": "2025-08-03T17:36:28.966545Z",
+     "shell.execute_reply.started": "2025-08-03T17:36:26.639482Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<SkyCoord (ICRS): (ra, dec) in deg\n",
+      "    (60.2901612, -44.1420602)>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'N' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# the host is barely resolved and the data are noisy:\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# use a starlet morphology for extra stability (esp to noise)\u001b[39;00m\n\u001b[1;32m     29\u001b[0m pad \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m((foot \u001b[38;5;241m-\u001b[39m morph\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m---> 30\u001b[0m pad \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mclip(pad, a_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, a_max \u001b[38;5;241m=\u001b[39m \u001b[43mN\u001b[49m)\n\u001b[1;32m     31\u001b[0m morph \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mpad(morph,(pad, pad), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     32\u001b[0m spectrum \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39mclip(spectrum,a_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m,a_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e6\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'N' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# separate channel information into band and epoch: 0 and 1 element\n",
     "# depends on how channels encodes multi-epoch information\n",
@@ -1225,10 +1245,10 @@
    "id": "fc695983-a374-417c-9c1c-2d763eab4997",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2025-08-01T13:56:50.925271Z",
-     "iopub.status.idle": "2025-08-01T13:56:50.925486Z",
-     "shell.execute_reply": "2025-08-01T13:56:50.925395Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:50.925386Z"
+     "iopub.status.busy": "2025-08-03T17:36:28.967987Z",
+     "iopub.status.idle": "2025-08-03T17:36:28.968224Z",
+     "shell.execute_reply": "2025-08-03T17:36:28.968124Z",
+     "shell.execute_reply.started": "2025-08-03T17:36:28.968114Z"
     }
    },
    "outputs": [],
@@ -1266,10 +1286,10 @@
    "id": "03cb9cb5-c654-4499-ac78-b34bf303b5e8",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2025-08-01T13:56:50.926632Z",
-     "iopub.status.idle": "2025-08-01T13:56:50.926870Z",
-     "shell.execute_reply": "2025-08-01T13:56:50.926773Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:50.926750Z"
+     "iopub.status.busy": "2025-08-03T17:36:28.968647Z",
+     "iopub.status.idle": "2025-08-03T17:36:28.968881Z",
+     "shell.execute_reply": "2025-08-03T17:36:28.968787Z",
+     "shell.execute_reply.started": "2025-08-03T17:36:28.968778Z"
     }
    },
    "outputs": [],
@@ -1297,10 +1317,10 @@
    "id": "18cffe5d-1cd8-4dba-b430-e6b9bed4507a",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2025-08-01T13:56:50.927309Z",
-     "iopub.status.idle": "2025-08-01T13:56:50.927594Z",
-     "shell.execute_reply": "2025-08-01T13:56:50.927478Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:50.927468Z"
+     "iopub.status.busy": "2025-08-03T17:36:28.969645Z",
+     "iopub.status.idle": "2025-08-03T17:36:28.969882Z",
+     "shell.execute_reply": "2025-08-03T17:36:28.969786Z",
+     "shell.execute_reply.started": "2025-08-03T17:36:28.969771Z"
     }
    },
    "outputs": [],
@@ -1312,18 +1332,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f24b4c42-742b-4f7e-b45b-58e8cc77eff0",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2025-08-01T13:56:50.928322Z",
-     "iopub.status.idle": "2025-08-01T13:56:50.928531Z",
-     "shell.execute_reply": "2025-08-01T13:56:50.928442Z",
-     "shell.execute_reply.started": "2025-08-01T13:56:50.928434Z"
+     "iopub.execute_input": "2025-08-03T17:36:29.203647Z",
+     "iopub.status.busy": "2025-08-03T17:36:29.203060Z",
+     "iopub.status.idle": "2025-08-03T17:36:29.221093Z",
+     "shell.execute_reply": "2025-08-03T17:36:29.220480Z",
+     "shell.execute_reply.started": "2025-08-03T17:36:29.203617Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'scene_' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Plot the model, for each epoch\u001b[39;00m\n\u001b[1;32m      2\u001b[0m scarlet2\u001b[38;5;241m.\u001b[39mplot\u001b[38;5;241m.\u001b[39mscene(\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mscene_\u001b[49m,\n\u001b[1;32m      4\u001b[0m     observation\u001b[38;5;241m=\u001b[39mobs,\n\u001b[1;32m      5\u001b[0m     norm\u001b[38;5;241m=\u001b[39mnorm,\n\u001b[1;32m      6\u001b[0m     show_model\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m      7\u001b[0m     show_observed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m      8\u001b[0m     show_rendered\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m      9\u001b[0m     show_residual\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     10\u001b[0m     add_labels\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     11\u001b[0m     add_boxes\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     12\u001b[0m     split_channels\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     13\u001b[0m     box_kwargs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124medgecolor\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfacecolor\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m     14\u001b[0m     label_kwargs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m     15\u001b[0m )\n\u001b[1;32m     16\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'scene_' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Plot the model, for each epoch\n",
     "scarlet2.plot.scene(\n",
