--- a/runScarlet2coadd.ipynb
+++ b/runScarlet2coadd.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "7947f3ec-7ba8-4141-aa84-ab9675b4bc22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:05.523276Z",
-     "iopub.status.busy": "2025-08-01T13:41:05.523107Z",
-     "iopub.status.idle": "2025-08-01T13:41:10.554982Z",
-     "shell.execute_reply": "2025-08-01T13:41:10.554345Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:05.523260Z"
+     "iopub.execute_input": "2025-08-03T17:03:58.511395Z",
+     "iopub.status.busy": "2025-08-03T17:03:58.510683Z",
+     "iopub.status.idle": "2025-08-03T17:03:58.514846Z",
+     "shell.execute_reply": "2025-08-03T17:03:58.514314Z",
+     "shell.execute_reply.started": "2025-08-03T17:03:58.511368Z"
     }
    },
    "outputs": [],
@@ -27,6 +27,7 @@
     "\n",
     "import lsst.afw.display as afwDisplay\n",
     "from lsst.afw.image import MultibandExposure\n",
+    "from lsst.afw.geom import SkyWcs\n",
     "from lsst.daf.butler import Butler\n",
     "from lsst.rsp import get_tap_service\n",
     "import lsst.geom as geom\n",
@@ -336,70 +337,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "fe871f8b-f206-4990-989e-5269773e3457",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:27.032189Z",
-     "iopub.status.busy": "2025-08-01T13:41:27.031480Z",
-     "iopub.status.idle": "2025-08-01T13:41:28.736784Z",
-     "shell.execute_reply": "2025-08-01T13:41:28.736246Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:27.032154Z"
+     "iopub.execute_input": "2025-08-03T17:15:47.052909Z",
+     "iopub.status.busy": "2025-08-03T17:15:47.052340Z",
+     "iopub.status.idle": "2025-08-03T17:15:47.064221Z",
+     "shell.execute_reply": "2025-08-03T17:15:47.063693Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:47.052882Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FITS standard SkyWcs:\n",
+      "Sky Origin: (61.0169491525, -43.8842975207)\n",
+      "Pixel Origin: (13999, 13999)\n",
+      "Pixel Scale: 0.2 arcsec/pixel\n",
+      "WCS Keywords\n",
+      "\n",
+      "Number of WCS axes: 2\n",
+      "CTYPE : 'RA---TAN' 'DEC--TAN' \n",
+      "CRVAL : 61.01694915254233 -43.88429752066116 \n",
+      "CRPIX : -9296.0 8342.0 \n",
+      "CD1_1 CD1_2  : -5.5555555555554e-05 0.0 \n",
+      "CD2_1 CD2_2  : 0.0 5.55555555555569e-05 \n",
+      "NAXIS : 0  0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Sadly this shortcut does not work for the cutouts and the wcs is wrong...\n",
-    "#wcs_g = WCS(cutout_image_g.getWcs().getFitsMetadata())\n",
-    "#wcs_r = WCS(cutout_image_r.getWcs().getFitsMetadata())\n",
-    "#wcs_i = WCS(cutout_image_i.getWcs().getFitsMetadata())\n",
-    "filename = os.path.join(tempdir,'cutout_g.fits')\n",
-    "cutout_image_g.writeFits(filename)\n",
-    "f=fits.open(filename)\n",
-    "wcs_g = WCS(f[1].header)\n",
-    "filename = os.path.join(tempdir,'cutout_r.fits')\n",
-    "cutout_image_r.writeFits(filename)\n",
-    "f=fits.open(filename)\n",
-    "wcs_r = WCS(f[1].header)\n",
-    "filename = os.path.join(tempdir,'cutout_i.fits')\n",
-    "cutout_image_g.writeFits(filename)\n",
-    "f=fits.open(filename)\n",
-    "wcs_i = WCS(f[1].header)"
+    "offset_g = geom.Extent2D(geom.Point2I(0, 0) - cutout_image_g.getXY0())\n",
+    "shifted_wcs_g = cutout_image_g.getWcs().copyAtShiftedPixelOrigin(offset)\n",
+    "wcs_g = WCS(shifted_wcs_g.getFitsMetadata())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "f0a4817e-769d-41f3-9601-22f06d421605",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:28.737578Z",
-     "iopub.status.busy": "2025-08-01T13:41:28.737378Z",
-     "iopub.status.idle": "2025-08-01T13:41:28.755033Z",
-     "shell.execute_reply": "2025-08-01T13:41:28.754551Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:28.737559Z"
+     "iopub.execute_input": "2025-08-03T17:15:51.305297Z",
+     "iopub.status.busy": "2025-08-03T17:15:51.304569Z",
+     "iopub.status.idle": "2025-08-03T17:15:51.308850Z",
+     "shell.execute_reply": "2025-08-03T17:15:51.308358Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:51.305272Z"
     }
    },
    "outputs": [],
    "source": [
+    "#We have images that are aligned to the same WCS, so we can \n",
     "obs = scarlet2.Observation(im_arr,\n",
     "                           weights=weight_arr,\n",
     "                           psf=scarlet2.ArrayPSF(jnp.array(psf_arr)),\n",
-    "                           wcs=wcs_r,\n",
+    "                           wcs=wcs_g,\n",
     "                           channels=['g','r','i'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "192beddf-3a92-471e-8981-7d938fe7ecfd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:28.755769Z",
-     "iopub.status.busy": "2025-08-01T13:41:28.755543Z",
-     "iopub.status.idle": "2025-08-01T13:41:30.275686Z",
-     "shell.execute_reply": "2025-08-01T13:41:30.275149Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:28.755737Z"
+     "iopub.execute_input": "2025-08-03T17:15:51.642925Z",
+     "iopub.status.busy": "2025-08-03T17:15:51.642327Z",
+     "iopub.status.idle": "2025-08-03T17:15:52.057521Z",
+     "shell.execute_reply": "2025-08-03T17:15:52.056854Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:51.642897Z"
     }
    },
    "outputs": [
@@ -410,7 +419,7 @@
        "<Figure size 800x400 with 2 Axes>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -432,15 +441,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "a0ca46ce-6ed4-4307-8f75-f11c6387085c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:30.276483Z",
-     "iopub.status.busy": "2025-08-01T13:41:30.276279Z",
-     "iopub.status.idle": "2025-08-01T13:41:31.595259Z",
-     "shell.execute_reply": "2025-08-01T13:41:31.594681Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:30.276465Z"
+     "iopub.execute_input": "2025-08-03T17:15:52.176070Z",
+     "iopub.status.busy": "2025-08-03T17:15:52.175370Z",
+     "iopub.status.idle": "2025-08-03T17:15:52.223936Z",
+     "shell.execute_reply": "2025-08-03T17:15:52.223367Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:52.176042Z"
     }
    },
    "outputs": [],
@@ -451,15 +460,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "bfcf1177-0ef7-4561-abb2-0a56057d378c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:31.596210Z",
-     "iopub.status.busy": "2025-08-01T13:41:31.595938Z",
-     "iopub.status.idle": "2025-08-01T13:41:31.600257Z",
-     "shell.execute_reply": "2025-08-01T13:41:31.599770Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:31.596144Z"
+     "iopub.execute_input": "2025-08-03T17:15:53.412798Z",
+     "iopub.status.busy": "2025-08-03T17:15:53.412121Z",
+     "iopub.status.idle": "2025-08-03T17:15:53.417154Z",
+     "shell.execute_reply": "2025-08-03T17:15:53.416646Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:53.412773Z"
     }
    },
    "outputs": [],
@@ -484,15 +493,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "c3966e29-7b94-4075-ac09-5b9b5b1296ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:31.601247Z",
-     "iopub.status.busy": "2025-08-01T13:41:31.600998Z",
-     "iopub.status.idle": "2025-08-01T13:41:31.649433Z",
-     "shell.execute_reply": "2025-08-01T13:41:31.648932Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:31.601230Z"
+     "iopub.execute_input": "2025-08-03T17:15:53.782569Z",
+     "iopub.status.busy": "2025-08-03T17:15:53.781880Z",
+     "iopub.status.idle": "2025-08-03T17:15:53.818941Z",
+     "shell.execute_reply": "2025-08-03T17:15:53.818396Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:53.782543Z"
     }
    },
    "outputs": [],
@@ -503,15 +512,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "4c727e24-36ca-42fb-83ce-1afc32010837",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:31.650268Z",
-     "iopub.status.busy": "2025-08-01T13:41:31.650074Z",
-     "iopub.status.idle": "2025-08-01T13:41:31.653772Z",
-     "shell.execute_reply": "2025-08-01T13:41:31.653302Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:31.650251Z"
+     "iopub.execute_input": "2025-08-03T17:15:54.176276Z",
+     "iopub.status.busy": "2025-08-03T17:15:54.175973Z",
+     "iopub.status.idle": "2025-08-03T17:15:54.180586Z",
+     "shell.execute_reply": "2025-08-03T17:15:54.180057Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:54.176251Z"
     },
     "scrolled": true
    },
@@ -571,15 +580,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "8c216e6c-eede-4ef0-8f7b-51613c50ac0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:31.654469Z",
-     "iopub.status.busy": "2025-08-01T13:41:31.654280Z",
-     "iopub.status.idle": "2025-08-01T13:41:38.885302Z",
-     "shell.execute_reply": "2025-08-01T13:41:38.884793Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:31.654453Z"
+     "iopub.execute_input": "2025-08-03T17:15:56.153575Z",
+     "iopub.status.busy": "2025-08-03T17:15:56.153292Z",
+     "iopub.status.idle": "2025-08-03T17:16:03.436840Z",
+     "shell.execute_reply": "2025-08-03T17:16:03.436269Z",
+     "shell.execute_reply.started": "2025-08-03T17:15:56.153554Z"
     }
    },
    "outputs": [
@@ -600,15 +609,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "id": "c6704007-a051-45a1-bb8e-7f6a4dbbaae6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:38.888212Z",
-     "iopub.status.busy": "2025-08-01T13:41:38.888005Z",
-     "iopub.status.idle": "2025-08-01T13:41:39.034686Z",
-     "shell.execute_reply": "2025-08-01T13:41:39.034186Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:38.888195Z"
+     "iopub.execute_input": "2025-08-03T17:16:03.437936Z",
+     "iopub.status.busy": "2025-08-03T17:16:03.437673Z",
+     "iopub.status.idle": "2025-08-03T17:16:04.600128Z",
+     "shell.execute_reply": "2025-08-03T17:16:04.599576Z",
+     "shell.execute_reply.started": "2025-08-03T17:16:03.437917Z"
     },
     "scrolled": true
    },
@@ -647,15 +656,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "id": "3462f097-23e7-4ca4-bb89-999cd5e43cbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:39.035641Z",
-     "iopub.status.busy": "2025-08-01T13:41:39.035443Z",
-     "iopub.status.idle": "2025-08-01T13:41:55.015521Z",
-     "shell.execute_reply": "2025-08-01T13:41:55.014947Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:39.035623Z"
+     "iopub.execute_input": "2025-08-03T17:16:04.600945Z",
+     "iopub.status.busy": "2025-08-03T17:16:04.600726Z",
+     "iopub.status.idle": "2025-08-03T17:16:06.081554Z",
+     "shell.execute_reply": "2025-08-03T17:16:06.080991Z",
+     "shell.execute_reply.started": "2025-08-03T17:16:04.600927Z"
     }
    },
    "outputs": [
@@ -695,15 +704,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "id": "3d8b1636-dca0-47c8-9424-57b29d008079",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:55.016356Z",
-     "iopub.status.busy": "2025-08-01T13:41:55.016163Z",
-     "iopub.status.idle": "2025-08-01T13:41:56.430328Z",
-     "shell.execute_reply": "2025-08-01T13:41:56.429745Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:55.016339Z"
+     "iopub.execute_input": "2025-08-03T17:16:06.083004Z",
+     "iopub.status.busy": "2025-08-03T17:16:06.082578Z",
+     "iopub.status.idle": "2025-08-03T17:16:06.115273Z",
+     "shell.execute_reply": "2025-08-03T17:16:06.114631Z",
+     "shell.execute_reply.started": "2025-08-03T17:16:06.082983Z"
     }
    },
    "outputs": [],
@@ -729,15 +738,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "id": "8e755a90-ba04-46fd-9a95-48dc8884845d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:41:56.431118Z",
-     "iopub.status.busy": "2025-08-01T13:41:56.430923Z",
-     "iopub.status.idle": "2025-08-01T13:42:01.755852Z",
-     "shell.execute_reply": "2025-08-01T13:42:01.755290Z",
-     "shell.execute_reply.started": "2025-08-01T13:41:56.431100Z"
+     "iopub.execute_input": "2025-08-03T17:16:06.116101Z",
+     "iopub.status.busy": "2025-08-03T17:16:06.115903Z",
+     "iopub.status.idle": "2025-08-03T17:16:07.088683Z",
+     "shell.execute_reply": "2025-08-03T17:16:07.088175Z",
+     "shell.execute_reply.started": "2025-08-03T17:16:06.116084Z"
     }
    },
    "outputs": [
@@ -772,15 +781,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "id": "b253dde1-27d2-47b2-bc8c-699f23d6b883",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:42:01.756715Z",
-     "iopub.status.busy": "2025-08-01T13:42:01.756504Z",
-     "iopub.status.idle": "2025-08-01T13:42:59.613753Z",
-     "shell.execute_reply": "2025-08-01T13:42:59.613106Z",
-     "shell.execute_reply.started": "2025-08-01T13:42:01.756697Z"
+     "iopub.execute_input": "2025-08-03T17:16:07.089503Z",
+     "iopub.status.busy": "2025-08-03T17:16:07.089295Z",
+     "iopub.status.idle": "2025-08-03T17:17:03.233412Z",
+     "shell.execute_reply": "2025-08-03T17:17:03.232808Z",
+     "shell.execute_reply.started": "2025-08-03T17:16:07.089486Z"
     }
    },
    "outputs": [],
@@ -792,15 +801,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "cd29a2ee-67d7-4e47-9b6a-ac879a48b39c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:42:59.614879Z",
-     "iopub.status.busy": "2025-08-01T13:42:59.614584Z",
-     "iopub.status.idle": "2025-08-01T13:43:00.531978Z",
-     "shell.execute_reply": "2025-08-01T13:43:00.531457Z",
-     "shell.execute_reply.started": "2025-08-01T13:42:59.614852Z"
+     "iopub.execute_input": "2025-08-03T17:17:03.234643Z",
+     "iopub.status.busy": "2025-08-03T17:17:03.234242Z",
+     "iopub.status.idle": "2025-08-03T17:17:04.573996Z",
+     "shell.execute_reply": "2025-08-03T17:17:04.573442Z",
+     "shell.execute_reply.started": "2025-08-03T17:17:03.234624Z"
     }
    },
    "outputs": [
@@ -836,15 +845,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "id": "59976ffc-8454-4f03-acd4-b395fc30707f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-01T13:43:00.532807Z",
-     "iopub.status.busy": "2025-08-01T13:43:00.532588Z",
-     "iopub.status.idle": "2025-08-01T13:43:01.653307Z",
-     "shell.execute_reply": "2025-08-01T13:43:01.652730Z",
-     "shell.execute_reply.started": "2025-08-01T13:43:00.532788Z"
+     "iopub.execute_input": "2025-08-03T17:17:04.575487Z",
+     "iopub.status.busy": "2025-08-03T17:17:04.575263Z",
+     "iopub.status.idle": "2025-08-03T17:17:05.051147Z",
+     "shell.execute_reply": "2025-08-03T17:17:05.050583Z",
+     "shell.execute_reply.started": "2025-08-03T17:17:04.575469Z"
     }
    },
    "outputs": [
